--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Exploring Forward and Inverse Dynamic Games
-with Priori Data Knowledge</h1>
+            <h1 class="title is-1 publication-title">A Forward-Inverse Dynamic Game Framework for Enhanced
+Multi-Agent Trajectory Planning</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
@@ -66,7 +66,7 @@ with Priori Data Knowledge</h1>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
+                    <span class="author-block">Institution Name<br>Under review</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
 
