--- a/index.html
+++ b/index.html
@@ -149,7 +149,26 @@ Multi-Agent Trajectory Planning</h1>
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+           Dynamic games serve as an effective framework
+for multi-agent trajectory planning, however, their resolution
+encounters two significant challenges: i) Traditional dynamic
+game models assume optimal agent behavior and prior knowl-
+edge of their goals, which is often unrealistic; ii) Inverse game
+theory has been used to infer agent goals from expert demon-
+strations, but struggles to bridge the gap between expert deci-
+sions with bounded rationality and model-driven solutions. To
+address these challenges, we propose a hybrid forward-inverse
+game framework to enhance the performance of multi-agent
+trajectory planning. In the inverse game, a neural network is
+employed to model agents’ complex cost functions, which is then
+updated by Inverse Reinforcement Learning (IRL) leveraging
+expert data. In the forward game, we integrate the Kullback-
+Leibler (KL) divergence and iterative linearization techniques
+to effectively bridge the gap between the expert decision
+and model-driven solution. Our method is evaluated through
+several simulations and real-world experiments, demonstrating
+its superior performance in multi-agent trajectory planning
+scenarios compared to existing methods.
           </p>
         </div>
       </div>
