--- a/index.html
+++ b/index.html
@@ -57,17 +57,21 @@ Multi-Agent Trajectory Planning</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Tianle Liu</a>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Youchneg Niu</a>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jing Zeng</a>
+                     <span class="author-block">
+                       <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shuo Li</a>
+                          <span class="author-block">
+                                <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">JinMing Xu</a>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Under review</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block">Zhejiang University<br>Under review</span>
+<!--                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
                   </div>
 
                   <div class="column has-text-centered">
@@ -149,26 +153,25 @@ Multi-Agent Trajectory Planning</h1>
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-           Dynamic games serve as an effective framework
-for multi-agent trajectory planning, however, their resolution
+          Dynamic games serve as an effective framework
+for multi-agent trajectory planning; however, their resolution
 encounters two significant challenges: i) Traditional dynamic
 game models assume optimal agent behavior and prior knowl-
-edge of their goals, which is often unrealistic; ii) Inverse game
-theory has been used to infer agent goals from expert demon-
-strations, but struggles to bridge the gap between expert deci-
-sions with bounded rationality and model-driven solutions. To
-address these challenges, we propose a hybrid forward-inverse
-game framework to enhance the performance of multi-agent
-trajectory planning. In the inverse game, a neural network is
-employed to model agents’ complex cost functions, which is then
-updated by Inverse Reinforcement Learning (IRL) leveraging
-expert data. In the forward game, we integrate the Kullback-
-Leibler (KL) divergence and iterative linearization techniques
-to effectively bridge the gap between the expert decision
-and model-driven solution. Our method is evaluated through
-several simulations and real-world experiments, demonstrating
-its superior performance in multi-agent trajectory planning
-scenarios compared to existing methods.
+edge of their goals, which is often unrealistic; ii) Inverse
+game theory has been used to infer agent goals from expert
+demonstrations, but struggles to bridge the gap between expert
+decisions with bounded rationality and model-driven solutions.
+To address these challenges, we propose a hybrid forward-
+inverse game framework to enhance the performance of multi-
+agent trajectory planning. In the inverse game, a neural
+network is employed to model agents’ complex cost functions,
+which is then updated by Inverse Reinforcement Learning (IRL)
+leveraging expert data. In the forward game, we integrate the
+Kullback-Leibler (KL) divergence and iterative linearization
+techniques to effectively bridge the gap between the expert
+decision and model-driven solution. Simulated and real-world
+experiments confirm the superiority of our approach against
+existing methods in multi-agent trajectory planning.
           </p>
         </div>
       </div>
