--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>Academi</title>
+  <title>A Forward-Inverse Dynamic Game Framework for Enhanced
+Multi-Agent Trajectory Planning</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -57,13 +58,13 @@ Multi-Agent Trajectory Planning</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Tianle Liu</a>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Tianle Liu</a></span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Youchneg Niu</a>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Youchneg Niu</a></span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jing Zeng</a>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jing Zeng</a></span>
                      <span class="author-block">
-                       <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shuo Li</a>
+                       <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shuo Li</a></span>
                           <span class="author-block">
                                 <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">JinMing Xu</a>
                   </span>
