--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Multi-Agent Trajectory Planning</h1>
                      <span class="author-block">
                        <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shuo Li</a></span>
                           <span class="author-block">
-                                <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">JinMing Xu</a>
+                                <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">JinMing Xu*</a>
                   </span>
                   </div>
 
