--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@ Multi-Agent Trajectory Planning</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Tianle Liu</a></span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Tianle Liu</a>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Youchneg Niu</a></span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Youchneg Niu</a>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jing Zeng</a></span>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jing Zeng</a>,</span>
                      <span class="author-block">
-                       <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shuo Li</a></span>
+                       <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shuo Li</a>and</span>
                           <span class="author-block">
                                 <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">JinMing Xu*</a>
                   </span>
