--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ Multi-Agent Trajectory Planning</h1>
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jing Zeng</a>,</span>
                      <span class="author-block">
-                       <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shuo Li</a>and</span>
+                       <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shuo Li</a></span>
+                         and
                           <span class="author-block">
                                 <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">JinMing Xu*</a>
                   </span>
