--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Multi-Agent Trajectory Planning</h1>
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Code comming soon</span>
                   </a>
                 </span>
 
