--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@ Multi-Agent Trajectory Planning</h1>
         type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
+        The proposed hybrid forward-inverse game framework. (1) In the inverse game, the agent’s goal is inferred from
+expert data using deep inverse reinforcement learning. (2) In the forward game, the problem is formulated by incorporating
+KL divergence, and the feedback Nash equilibrium under nonlinear dynamics is obtained via iterative linearization.
       </h2>
     </div>
   </div>
@@ -226,7 +228,7 @@ existing methods in multi-agent trajectory planning.
 
 
 <!-- Youtube video -->
-<section class="hero is-small is-light">
+<!-- <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <!-- Paper video. -->
@@ -242,7 +244,7 @@ existing methods in multi-agent trajectory planning.
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- End youtube video -->
 
 
