--- a/index.html
+++ b/index.html
@@ -252,12 +252,12 @@ existing methods in multi-agent trajectory planning.
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title is-3">Another Carousel</h2>
+      <h2 class="title is-3">Video Presentation</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="static/videos/carousel1.mp4"
+            <source src="static/videos/Presentation"
             type="video/mp4">
           </video>
         </div>
