--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ existing methods in multi-agent trajectory planning.
         <div class="item item-video1">
           <video poster="" id="video1" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="static/videos/Presentation"
+            <source src="static/videos/Presentation.mp4"
             type="video/mp4">
           </video>
         </div>
