--- a/index.html
+++ b/index.html
@@ -129,31 +129,11 @@ Multi-Agent Trajectory Planning</h1>
   </div>
 </section>
 
-
-<!-- Teaser video-->
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
-        <source src="static/videos/banner_video.mp4"
-        type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        The proposed hybrid forward-inverse game framework. (1) In the inverse game, the agent’s goal is inferred from
-expert data using deep inverse reinforcement learning. (2) In the forward game, the problem is formulated by incorporating
-KL divergence, and the feedback Nash equilibrium under nonlinear dynamics is obtained via iterative linearization.
-      </h2>
-    </div>
-  </div>
-</section>
-<!-- End teaser video -->
-
   <!-- Teaser image -->
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="static/images/out.png" alt="Banner Image" height="100%">
+      <img src="static/images/overview.png" alt="Banner Image" height="100%">
       <h2 class="subtitle has-text-centered">
         The proposed hybrid forward-inverse game framework. (1) In the inverse game, the agent’s goal is inferred from
         expert data using deep inverse reinforcement learning. (2) In the forward game, the problem is formulated by incorporating
