--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Multi-Agent Trajectory Planning</h1>
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <img src="static/images/overview.png" alt="Banner Image" height="100%">
+      <img src="static/images/overview.jpg" alt="Banner Image" height="100%">
       <h2 class="subtitle has-text-centered">
         The proposed hybrid forward-inverse game framework. (1) In the inverse game, the agent’s goal is inferred from
         expert data using deep inverse reinforcement learning. (2) In the forward game, the problem is formulated by incorporating
