--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@ existing methods in multi-agent trajectory planning.
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Poster</h2>
+      <h2 class="title">Theorem1_Proof</h2>
 
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
+      <iframe  src="static/pdfs/Theorem1_Proof.pdf" width="100%" height="550">
           </iframe>
         
       </div>
