--- a/index.html
+++ b/index.html
@@ -243,6 +243,21 @@ existing methods in multi-agent trajectory planning.
 <!-- End youtube video -->
 
 
+<!-- Teaser video-->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <video poster="" id="tree" autoplay controls muted loop height="100%">
+        <!-- Your video here -->
+        <source src="static/videos/banner_video.mp4"
+        type="video/mp4">
+      </video>
+       <h2 class="title is-3">Video Presentation</h2>
+    </div>
+  </div>
+</section>
+<!-- End teaser video -->
+
 <!-- Video carousel -->
 <section class="hero is-small">
   <div class="hero-body">
