--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ existing methods in multi-agent trajectory planning.
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-     <h2 class="title is-3">Video Presentation</h2>
+     <h2 class="title">Video Presentation</h2>
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
         <source src="static/videos/7437bb53a4d3711b33a4f778fe2ab86e.mp4"
