--- a/index.html
+++ b/index.html
@@ -247,11 +247,12 @@ existing methods in multi-agent trajectory planning.
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-     <h2 class="title">Video Presentation</h2>
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
+       <div class="container">
+         <h2 class="title">Video Presentation</h2>
+           <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-        <source src="static/videos/7437bb53a4d3711b33a4f778fe2ab86e.mp4"
-        type="video/mp4">
+             <source src="static/videos/7437bb53a4d3711b33a4f778fe2ab86e.mp4"
+              type="video/mp4">
       </video>
       
     </div>
