--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@ existing methods in multi-agent trajectory planning.
 <!-- Image carousel -->
 <section class="hero is-small">
   <div class="hero-body">
+    <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
