--- a/index.html
+++ b/index.html
@@ -184,34 +184,45 @@ existing methods in multi-agent trajectory planning.
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-       <h2 class="title is-3">Video Presentation</h2>
+       <h2 class="title is-3">Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
         <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          First image description.
+         Experimental results for CAMP. (a) Four agents
+interactively move towards the target at the same time, while
+every two agents are set up to exchange positions. (b) Two
+agents move towards the target at the same time.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
         <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          Second image description.
+           Experimental results for RM. The trajectory planned
+by Agent2 completes the collision avoidance merge. Note
+that Agents4 and 5 are not included in the interaction due
+to the distance between the lanes, but their trajectories are
+used as an indicator of the number of collisions.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
         <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-         Third image description.
+       Comparison of trajectory errors and parameter errors
+obtained after 50 experiments under different methods.
        </h2>
      </div>
      <div class="item">
       <!-- Your image here -->
       <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
-        Fourth image description.
+       TABLE I: Quantitative results of the experiment. 50 trials
+are conducted for the scenarios mentioned in the experiment.
+All metrics are presented as means and standard deviations,
+except for the number of collision.
       </h2>
     </div>
   </div>
