--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@ existing methods in multi-agent trajectory planning.
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-       <h2 class="title is-3">Results</h2>
+       <h2 class="title is-3">Simulation Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/result1.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
          Experimental results for CAMP. (a) Four agents
 interactively move towards the target at the same time, while
@@ -198,7 +198,7 @@ agents move towards the target at the same time.
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/result3.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
            Experimental results for RM. The trajectory planned
 by Agent2 completes the collision avoidance merge. Note
@@ -209,7 +209,7 @@ used as an indicator of the number of collisions.
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/result2.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
        Comparison of trajectory errors and parameter errors
 obtained after 50 experiments under different methods.
@@ -217,7 +217,7 @@ obtained after 50 experiments under different methods.
      </div>
      <div class="item">
       <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
+      <img src="static/images/table.jpg" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
        TABLE I: Quantitative results of the experiment. 50 trials
 are conducted for the scenarios mentioned in the experiment.
