--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ existing methods in multi-agent trajectory planning.
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/result1.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/result1.jpg" alt="MY ALT TEXT" style="width: 50%; height: auto;"/>
         <h2 class="subtitle has-text-centered">
          Experimental results for CAMP. (a) Four agents
 interactively move towards the target at the same time, while
