--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ existing methods in multi-agent trajectory planning.
     <div class="container">
        <h2 class="title is-3">Simulation Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
-       <div class="item">
+       <div class="item" style="width: 50%; margin: 0 auto;">
         <!-- Your image here -->
         <img src="static/images/result1.jpg" alt="MY ALT TEXT" style="width: 50%; height: auto;" />
         <h2 class="subtitle has-text-centered">
@@ -196,7 +196,7 @@ every two agents are set up to exchange positions. (b) Two
 agents move towards the target at the same time.
         </h2>
       </div>
-      <div class="item">
+      <div class="item" style="width: 50%; margin: 0 auto;">
         <!-- Your image here -->
         <img src="static/images/result3.jpg" alt="MY ALT TEXT" style="width: 50%; height: auto;" />
         <h2 class="subtitle has-text-centered">
@@ -207,7 +207,7 @@ to the distance between the lanes, but their trajectories are
 used as an indicator of the number of collisions.
         </h2>
       </div>
-      <div class="item">
+      <div class="item" style="width: 50%; margin: 0 auto;">
         <!-- Your image here -->
         <img src="static/images/result2.jpg" alt="MY ALT TEXT" style="width: 50%; height: auto;" />
         <h2 class="subtitle has-text-centered">
@@ -215,7 +215,7 @@ used as an indicator of the number of collisions.
 obtained after 50 experiments under different methods.
        </h2>
      </div>
-     <div class="item">
+     <div class="item" style="width: 50%; margin: 0 auto;">
       <!-- Your image here -->
       <img src="static/images/table.jpg" alt="MY ALT TEXT" style="width: 50%; height: auto;" />
       <h2 class="subtitle has-text-centered">
