--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@ Multi-Agent Trajectory Planning</h1>
                     </span>
 
                     <!-- Supplementary PDF link -->
-                    <span class="link-block">
-                      <a href="static/pdfs/supplementary_material.pdf" target="_blank"
-                      class="external-link button is-normal is-rounded is-dark">
-                      <span class="icon">
-                        <i class="fas fa-file-pdf"></i>
-                      </span>
-                      <span>Supplementary</span>
-                    </a>
-                  </span>
+<!--                     <span class="link-block"> -->
+<!--                       <a href="static/pdfs/supplementary_material.pdf" target="_blank" -->
+<!--                       class="external-link button is-normal is-rounded is-dark"> -->
+<!--                       <span class="icon"> -->
+<!--                         <i class="fas fa-file-pdf"></i> -->
+<!--                       </span> -->
+<!--                       <span>Supplementary</span> -->
+<!--                     </a> -->
+<!--                   </span> -->
 
                   <!-- Github link -->
                   <span class="link-block">
