--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <title>A Forward-Inverse Dynamic Game Framework for Enhanced
 Multi-Agent Trajectory Planning</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="static/images/me.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
