--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Multi-Agent Trajectory Planning</title>
             <h1 class="title is-1 publication-title">A Forward-Inverse Dynamic Game Framework for Enhanced
 Multi-Agent Trajectory Planning</h1>
             <div class="is-size-5 publication-authors">
-              <!-- Paper authors -->
+<!--               <!-- Paper authors -->
               <span class="author-block">
                 <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Tianle Liu</a>,</span>
                 <span class="author-block">
@@ -67,7 +67,7 @@ Multi-Agent Trajectory Planning</h1>
                        <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shuo Li</a></span>
                          and
                           <span class="author-block">
-                                <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">JinMing Xu*</a>
+                                <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">JinMing Xu*</a> -->
                   </span>
                   </div>
 
