--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@ Multi-Agent Trajectory Planning</title>
 Multi-Agent Trajectory Planning</h1>
             <div class="is-size-5 publication-authors">
 <!--               <!-- Paper authors -->
-              <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Tianle Liu</a>,</span>
-                <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Youchneg Niu</a>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jing Zeng</a>,</span>
-                     <span class="author-block">
-                       <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shuo Li</a></span>
-                         and
-                          <span class="author-block">
-                                <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">JinMing Xu*</a> -->
-                  </span>
+<!--               <span class="author-block"> -->
+<!--                 <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Tianle Liu</a>,</span> -->
+<!--                 <span class="author-block"> -->
+<!--                   <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Youchneg Niu</a>,</span> -->
+<!--                   <span class="author-block"> -->
+<!--                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jing Zeng</a>,</span> -->
+<!--                      <span class="author-block"> -->
+<!--                        <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Shuo Li</a></span> -->
+<!--                          and -->
+<!--                           <span class="author-block"> -->
+<!--                                 <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">JinMing Xu*</a> --> -->
+<!--                   </span> -->
                   </div>
 
                   <div class="is-size-5 publication-authors">
