--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@ Multi-Agent Trajectory Planning</h1>
 <!--                          and -->
 <!--                           <span class="author-block"> -->
 <!--                                 <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">JinMing Xu*</a> --> -->
-<!--                   </span> -->
-                  </div>
+<!--                    </span>  -->
+<!--                   </div> -->
 
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">Zhejiang University<br>Under review</span>
+<!--                   <div class="is-size-5 publication-authors"> -->
+<!--                     <span class="author-block">Zhejiang University<br>Under review</span> -->
 <!--                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
-                  </div>
+<!--                   </div> -->
 
-                  <div class="column has-text-centered">
+<!--                   <div class="column has-text-centered"> -->
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
