--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@ Multi-Agent Trajectory Planning</h1>
 <!--                   </div> -->
 
 <!--                   <div class="column has-text-centered"> -->
-                    <div class="publication-links">
-                         <!-- Arxiv PDF link -->
-                      <span class="link-block">
-                        <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
-                        class="external-link button is-normal is-rounded is-dark">
-                        <span class="icon">
-                          <i class="fas fa-file-pdf"></i>
-                        </span>
-                        <span>Paper</span>
-                      </a>
-                    </span>
+<!--                     <div class="publication-links"> -->
+                         Arxiv PDF link
+<!--                       <span class="link-block"> -->
+<!--                         <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank" -->
+<!--                         class="external-link button is-normal is-rounded is-dark"> -->
+<!--                         <span class="icon"> -->
+<!--                           <i class="fas fa-file-pdf"></i> -->
+<!--                         </span> -->
+<!--                         <span>Paper</span> -->
+<!--                       </a> -->
+<!--                     </span> -->
 
                     <!-- Supplementary PDF link -->
 <!--                     <span class="link-block"> -->
@@ -135,9 +135,9 @@ Multi-Agent Trajectory Planning</h1>
     <div class="hero-body">
       <img src="static/images/overview.jpg" alt="Banner Image" height="100%">
       <h2 class="subtitle has-text-centered">
-        The proposed hybrid forward-inverse game framework. (1) In the inverse game, the agent’s goal is inferred from
-        expert data using deep inverse reinforcement learning. (2) In the forward game, the problem is formulated by incorporating
-        KL divergence, and the feedback Nash equilibrium under nonlinear dynamics is obtained via iterative linearization.
+        The proposed hybrid forward-inverse game framework. (1) In the inverse game, the agent’s goal is inferred from expert
+data. (2) In the forward game, the problem is formulated by incorporating KL divergence, and the feedback Nash equilibrium
+under nonlinear dynamics is obtained via iterative linearization.
       </h2>
     </div>
   </div>
